--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -28,32 +28,64 @@
     ];
 
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
-
+console.log(inventors);
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+const fifteen=inventors.filter(dupa=>dupa.year>=1500 && dupa.year<1600);
+console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+const fullNames=inventors.map(dupa=>`${dupa.first} ${dupa.last}`);
+console.log(fullNames);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+const ordered=inventors.sort(function(a,b){
+    if(a.year>b.year){
+        return 1;
+    }else{
+        return -1;
+     }
+});
+console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+const total=inventors.reduce((total,inventor)=>{
+    return total+(inventor.passed-inventor.year);
+},0);
+console.log(total);
     // 5. Sort the inventors by years lived
-
+const oldest=inventors.sort(function(a,b){
+    const lastGuy=a.passed-a.year;
+    const nextGuy=b.passed-b.year;
+    return lastGuy>nextGuy ? -1 : 1;
+});
+console.table(oldest);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+// const category=document.querySelector('.mw-category');
+// const links=Array.from(category.querySelectorAll('a'));//change into array
+// const de=links.map(link => link.textContent).filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+const alpha=people.sort((lastOne,nextOne)=>{
+    const [alast,afirst]=lastOne.split(', ');
+    const [blast,bfirst]=nextOne.split(', ');
+    return alast>blast ? 1:-1;
+});
+console.log(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+const transportation=data.reduce(function(obj,item){
+    if(!obj[item]){
+        obj[item]=0;
+    }
+    obj[item]++;
+    return obj;
+},{});//strat with a blank object
+console.log(transportation);
   </script>
 </body>
 </html>
