custom video player

--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Video Player</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
    <div class="player">
-     <video class="player__video viewer" src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
+    <video class="player__video viewer" src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
 
      <div class="player__controls">
        <div class="progress">
@@ -22,6 +22,6 @@
      </div>
    </div>
 
-  <script src="scripts.js"></script>
+    <script src='js/app.js'></script>
 </body>
 </html>
